Recent project container height fixed on mobile.

--- a/src/css/ContactForm.css
+++ b/src/css/ContactForm.css
@@ -50,7 +50,7 @@ form {
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .contact-input {
-    min-width: 300px;
+    min-width: 250px;
     max-width: 300px;
   }
 }
